# data-object

./: README  Test.hs  data-object.cabal  runtests.hs  test.hs
Data/: Attempt.hs  Object.hs  Scalar.hs
Data/Convertible/Instances/: String.hs  Text.hs
Data/Object/: Base.hs  Dangerous.hs  Raw.hs  Scalar.hs  String.hs  Text.hs  Translate.hs
