name:            data-object
version:         0.2.0
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Represent hierachichal structures, called objects in JSON.
description:     These objects show up in different places, eg JSON, Yaml.
                 By providing a representation in a separate repository,
                 other libraries can share a single representation of
                 these structures.
category:        Data
stability:       unstable
cabal-version:   >= 1.2
build-type:      Simple
homepage:        http://github.com/snoyberg/data-object/tree/master

library
    build-depends:   base >= 4 && < 5,
                     bytestring >= 0.9.1.4 && < 1,
                     text >= 0.5,
                     time >= 1,
                     safe-failure,
                     old-locale >= 1,
                     syb,
                     attempt,
                     convertible >= 1.2.0,
                     control-monad-failure >= 0.4
    exposed-modules: Data.Object
                     Data.Object.Text
                     Data.Object.Scalar
                     Data.Object.String
                     Data.Convertible.Instances.Text
                     Data.Convertible.Instances.String
    ghc-options:     -Wall
